--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,13 +64,15 @@ dependencies:
   fluttericon: ^2.0.0
   dartz: ^0.10.1
   flutter_svg: ^2.0.5
-
   mapbox_gl: ^0.15.0
   flutter_native_splash: ^2.0.2
+
   location: ^4.3.0
   carousel_slider: ^4.0.0
   dio: ^4.0.4
   flutter_dotenv: ^5.0.2
+
+
 
 dev_dependencies:
   flutter_test:
@@ -83,28 +85,34 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/mapbox.png"
+
+flutter_native_splash:
+  color: "#000000"
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
+  # included with your application, so that you can use the icon in
   # the material Icons class.
   uses-material-design: true
 
-  assets:
-    - assets/images/
-    - assets/lottie/
-    
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icon/
+    - assets/images/
+    - assets/config/
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
